--- a/MineClicker/textures/desktop.ini
+++ b/MineClicker/textures/desktop.ini
@@ -1,3 +1,9 @@
 [LocalizedFileNames]
-grass_block_side.png=@grass_block_side.png,0
-dirt.png=@dirt.png,0
+redstone_ore.png=@redstone_ore.png,0
+lapis_ore.png=@lapis_ore.png,0
+iron_ore.png=@iron_ore.png,0
+gold_ore.png=@gold_ore.png,0
+emerald_ore.png=@emerald_ore.png,0
+diamond_ore.png=@diamond_ore.png,0
+coal_ore.png=@coal_ore.png,0
+obsidian.png=@obsidian.png,0
