--- a/MineClicker/textures/desktop.ini
+++ b/MineClicker/textures/desktop.ini
@@ -7,3 +7,16 @@ emerald_ore.png=@emerald_ore.png,0
 diamond_ore.png=@diamond_ore.png,0
 coal_ore.png=@coal_ore.png,0
 obsidian.png=@obsidian.png,0
+netherrack.png=@netherrack.png,0
+soul_sand.png=@soul_sand.png,0
+magma.png=@magma.png,0
+nether_quartz_ore.png=@nether_quartz_ore.png,0
+chiseled_quartz_block_top.png=@chiseled_quartz_block_top.png,0
+chiseled_quartz_block.png=@chiseled_quartz_block.png,0
+quartz_pillar_top.png=@quartz_pillar_top.png,0
+quartz_pillar.png=@quartz_pillar.png,0
+quartz_bricks.png=@quartz_bricks.png,0
+quartz_block_top.png=@quartz_block_top.png,0
+quartz_block_side.png=@quartz_block_side.png,0
+quartz_block_bottom.png=@quartz_block_bottom.png,0
+nether_bricks.png=@nether_bricks.png,0
